# memscope-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
contrib/plugins/: il2cpp.py  netcap.py
docs/: architecture.md  hooking.md  lua-reference.md  peb.md
memscope_mcp/: __init__.py  cli.py  paths.py  server.py  session.py
memscope_mcp/extensions/: __init__.py  bootstrap.py
memscope_mcp/instructions/: __init__.py  base.py
memscope_mcp/plugins/: __init__.py
memscope_mcp/tools/: execute.py  hooking.py  lua_engine.py  lua_scripts.py  scanning.py  types.py
memscope_mcp/utils/: disasm.py  logger.py  shellcode.py
plugins/: README.md
src/: server.py  session.py
src/extensions/: base.py
src/instructions/: __init__.py  base.py
src/plugins/: __init__.py
src/tools/: execute.py  lua_scripts.py  memory.py  pointers.py  types.py
src/utils/: heuristics.py  logger.py  memory_utils.py  pattern.py  (+3 more)
tests/: conftest.py  test_address_parsing.py  test_bitwise.py  test_comparisons.py  test_cross_reference.py  test_deref_args.py  test_disasm.py  test_extension_bootstrap.py  test_filter_packets.py  test_header_only.py  test_heuristics.py  test_hook_shellcode.py  test_lua_engine.py  test_netcap_lifecycle.py  test_netcap_plugin.py  test_netcap_udp.py  test_netcap_wsa.py  test_pe_exports.py  test_peb.py  test_phase5_hardening.py  test_protocol_framing.py  test_relocation.py  test_ring_buffer.py  test_scanning.py  test_session_lifecycle.py  test_session_recording.py  test_shellcode.py  test_shutdown.py  test_smoke.py  test_stream_assembly.py  test_thread_suspension.py  test_types.py  test_utils.py
(+29 files in other folders)
